index.css
/*
	This top section is for link/button hover animations. BE CAREFUL!
*/
a, button {
	border-style:none;
	text-decoration: none;
	line-height: 1;
	display: inline-block;
	padding: 5px 0;
	pointer-events: all;
}

.underline {
	font-size:2.5em;
	padding-bottom: 2px;
}

a, button, .link_body, #git_button, #coffee_box, #return_button {
	background-size: 200% 100%;
	background-position: -100%;
	-webkit-background-clip: text;
	transition: all 0.3s ease-in-out;
	background: linear-gradient(0deg, #0b0b0b, #0b0b0b) no-repeat right bottom / 0 var(--bg-h);
	transition: background-size 350ms;
	--bg-h: 100%;
}

a:where(:hover, :focus-visible), button:where(:hover, :focus-visible), #coffee_box:where(:hover, :focus-visible), #git_button:where(:hover, :focus-visible), .link_body:where(:hover, :focus-visible), #return_button:where(:hover, :focus-visible) {
	background-size: 100% var(--bg-h);
	background-position-x: left;
}

/*
	This is general styling, be less careful I guess.
*/
html {
	background-color:#1f1f1f;
	scroll-behavior: smooth;
	text-align:center;
	color:#ffb347;
	font-family: Courier New;
	font-size: 2em;
	font-weight: bold;
	line-height: 1.2em;
	word-spacing: -2px;
	pointer-events: none;
	margin: 0;
	padding: 0;
}

body {
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
}

.nav_bar {
	align-self: center;
	z-index: 99;
	position: relative;
	display: flex;
	flex-direction: row;
	padding: 0;
	white-space: nowrap;
	pointer-events: all;
	justify-content: left;
	width: 100%;
	margin-top: 0.25em;
	margin-bottom: 0.25em;
}

#coffee_box, #git_button, #refresh_button, #about_button, #skills_button, #playlist_button {
	font-family: Courier New;
	
	font-weight: bold;
	color: #ffb347;
	font-size:1.75vw;
	width:fit-content;
	padding-left:15px;
	padding-right:15px;
	padding-top:15px;
	padding-bottom:15px;
	height: fit-content;
	border: 2px solid;
	display:inline-block;
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
}

nav a {
	margin-right: 0.25em;
	margin-left: 0.25em;
}

#git_button {
	margin-left: auto;
}

#return_button {
	z-index: 100;
	opacity: 0;
	color: #ffb347;
	border-color: #ffb347;
	position: fixed;
	width: 1rem;
	height: 1rem;
	padding: 0.5rem;
	top: 0.75em;
	right: 0.75em;
	font-size: 1.25em;
	border-style: solid;
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
}


#refresh_button {
	padding-bottom: 10px;
	padding-top: 10px;
	pointer-events: all;
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
}

#head_image_container {
	position: relative;
	top: -2.25em;
	z-index: -1;
}

#head_image {
	height: 6em;
	
}

p {
	font-size:2.4em;
}

.box_indicator {
	position: relative;
	margin-top: auto;
	margin-bottom: 1em;
}

.prev_progress_button, .next_progress_button, #puzzle_crawler {
	display: inline-block;
	margin-top: 3%;
	color: #ffb347;
	text-decoration: none;
	padding: 8px 16px;
	border-radius: 20px;
	font-size: 165%;
	pointer-events: all;
}

#puzzle_crawler {
	padding-left: 0px;
	padding-right: 0px;
	margin: auto;
	line-height: 1.1em;
}

section {
	position: relative;
	background-color: rgba(23,23,23,0.65);
}

#the_playlist {
	overflow-x: hidden;
}

#artist_container, #song_container {
	font-size: 2.75vw;
}

#top_section {
	display: flex;
	flex-direction: column;
	background-color: transparent;
	width: 100%;
	height: 95vh;
}

.page_break {
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
	border-top-style: solid;
}

.profile_pic, .profile_pic2 {
	background-color: #0f0f0f;
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
	max-width: 33%;
	margin: 3%;
	padding: 2%;
	border-style: solid;
}
.text_container {
	margin: 3%;
	text-align: left;
}

.link_body, .link_body_foot {
	color: #ffb347;
	display: inline;
	padding-bottom: 0px;
	padding-top: 0px;
	border-bottom-style: solid;
	pointer-events: all;
	border-image-source: linear-gradient(to right, #6D00CF, #F25050);
	border-image-slice: 1;
}
.box_spacer {
	display: inline-flex;
	width: 40%;
}

footer {
	position: relative;
	padding-top: 1%;
	min-height: 4.5em;
	height: fit-content;
	background-color: #101010;
	pointer-events: all;
}

#small_text {
	position: absolute;
	bottom: 0;
	height: fit-content;
	width: 100%;
	display: flex;
	justify-content: space-between;
	white-space: nowrap;
}

.praise, .ina_credit {
	display: inline-block;
	font-size: 0.6em;
	margin-left: 0.5em;
	margin-right: 0.5em;
}

.work_text {
	position: relative;
	left: 2%;
	bottom: 10%;
	text-align: left;
}

#special {
  background: -webkit-linear-gradient(left, #6D00CF, #F25050);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#three_div {
	height: 100%;
	width: 100%;
	position: absolute;
	left: 0;
	top: 8%;
}

#particles-js {
	position: fixed;
	height: 100vh;
	width: 100vw;
	pointer-events: all;
}


/* :0 What?! Omg mobile responsiveness?!?!?! */

@media (orientation:  portrait) {
	.box_indicator {
		font-size: 1em;
	}

	.prev_progress_button, .next_progress_button {
		font-size: 3em;
	}

	html {
		font-size: 1em;
	}

	#head_image_container {
		top: 10%;
	}
}

